syntax = "proto3";
package comdex.ojooracle.v1beta1;

import "gogoproto/gogo.proto";
import "comdex/ojooracle/v1beta1/tx.proto";

option go_package = "github.com/comdex-official/comdex/x/ojooracle/types";

message FetchPriceProposal {
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  MsgFetchPriceData FetchPrice = 3 [(gogoproto.nullable) = false];
}
