syntax = "proto3";
package comdex.ojooracle.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "comdex/ojooracle/v1beta1/fetch_price.proto";

option go_package = "github.com/comdex-official/comdex/x/ojooracle/types";

message MsgFetchPriceData {
  string creator = 1;
  string source_channel = 3;
  FetchPriceCallData calldata = 4;
  uint64 execute_gas = 10;
  string client_id = 11 [(gogoproto.customname) = "ClientID"];
  uint64 twa_batch_size = 12;
  int64 accepted_height_diff = 13 [
    (gogoproto.moretags)   = "yaml:\"accepted_height_diff\""
  ];
}

message MsgFetchPriceDataResponse {
}
